# apertium-cat-glg

./: .gitattributes  .gitignore  Makefile.am  README  apertium-cat-glg.cat-glg.dix  apertium-cat-glg.cat-glg.lrx  apertium-cat-glg.cat-glg.t1x  apertium-cat-glg.glg-cat.t1x  configure.ac  modes.xml
dev/testvoc/: inconsistency.sh  testvoc-summary.cat-glg.txt  testvoc-summary.glg-cat.txt  testvoc.conf  testvoc.sh
t/: config.sh
test/: cat-glg-pending-biltrans-expected.txt  cat-glg-pending-chunker-expected.txt  cat-glg-pending-disam-expected.txt  cat-glg-pending-generator-expected.txt  cat-glg-pending-input.txt  cat-glg-pending-lex-expected.txt  cat-glg-pending-morph-expected.txt  cat-glg-pending-postgen-expected.txt  cat-glg-pending-postgen-gold.txt  cat-glg-pending-pretransfer-expected.txt  cat-glg-pending-tagger-expected.txt  tests.json
texts/: cuento.cat.txt  cuento.glg.txt
